таймеры жрут дивы

--- a/index.html
+++ b/index.html
@@ -7,12 +7,28 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="pic timer-cont">
+      <img src="img/bear.jpg" alt="" />
+      <span class="timer3"></span>
+    </div>
     <div class="timer-with-progress">
       <div class="progress_width">
         <div id="progressBar"></div>
       </div>
       <span class="timer2"></span>
     </div>
+
+    <div class="timer4-cont timer-cont">
+      <div class="t4-bar"></div>
+      <span class="timer4"></span>
+    </div>
+    <div class="timer-cont">
+      <div class="progress_width">
+        <div class="progressBar5"></div>
+      </div>
+      <span class="timer5"></span>
+    </div>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
