--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="timer-with-progress">
       <div class="progress_width">
-        <div id="progressBar"></div>
+        <div class="progressBar2"></div>
       </div>
       <span class="timer2"></span>
     </div>
