плющим с кнопкой, но не возвращается в начальное положение

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
       </div>
       <span class="timer5"></span>
     </div>
-
+    <input type="" class="start-time" /><label for="start-time"
+      >Введите число секунд таймера</label
+    >
+    <button id="startSqueeze">Плющить</button>
+    <div class="out-1"></div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
